<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Ready To Start!!</string>
	<string name="app_name">Safe Sport Tracker</string>
	<string name="TeamM">Team DManLancers:"\n \n" "  "<i>Firestruck</i>      "                       "<i>EduRocks</i>          "                        " <i>Sycmos</i></string>
	<string name="settings_screen_name">Safe Sport Tracker ©</string>
	<string name="velocidade_m_x_">Maximum speed:</string>
	<string name="sim">Yes</string>
	<string name="conectar_com_facebook_">Connect to Facebook ?</string>
	<string name="fazer_login_com_o_facebook_">Login with Facebook ?</string>
	<string name="altganha_m">CoveredAltitude</string>
	<string name="icon_facebook">Icon_Facebook</string>
	<string name="App_Url_Tittle"><b>Safe Sport Tracker Website:"\n \n"</b>Discover all the latest news, updates and report bugs when possible for future updates.<u>Here</u>.</string>
	<string name="safe_sport_tracker">Safe Sport Tracker ©</string>
	<string name="bike_icon">bike_icon</string>
	<string name="Dmanlancers"><b>About DManLancers:"\n \n"</b>We are a programmer and web designers freelancers team, do you need any service?"\n"Contact-us: <u>Here</u>. </string>
	<string name="atletismo">Run</string>
	<string name="app_name">Safe Sport Tracker</string>
	<string name="snowboard">Snowboard</string>
	<string name="ic">ic</string>
	<string name="icon_cam">Icon_Cam</string>
	<string name="escalada">Mountaineering</string>
	<string name="mountain_icon">Mountain_icon</string>
	<string name="velocidade_m_dia_">Average speed:</string>
	<string name="snow_icon">snow_icon</string>
	<string name="Team">DManLancers Team:"\n \n" "  "<i>Firestruck</i>        "           "<i>EduRocks</i>            "         " <i>Sycmos</i></string>
	<string name="email"><u>dmanlancers@gmail.com</u></string>
	<string name="walk_icon">walk_icon</string>
	<string name="escolha_uma_modalidade_">Choose an activity:</string>
	<string name="nao">No</string>
	<string name="icon_bike">Icon_bike</string>
	<string name="run_icon">run_icon</string>
	<string name="ciclismo">Bike</string>
	<string name="caminhada">Walk</string>
	<string name="velocidade_atual_">Current speed:</string>
	<string name="settings_screen_name">Safe Sport Tracker</string>
	<string name="total_dist_ncia_">Total distance:</string>
	<string name="altitude_m">Altitude</string>
	<string name="partilhar_facebook">Share with Facebook?</string>
	<string name="habilitar_gps">Activate your Gps to start the application</string>
	<string name="definicoes_gps">Gps definitions</string>
	<string name="cancelar">Cancel</string>
	<string name="definicoes">Definitions</string> 
	<string name="modo_mapa">Map Mode</string>	
	<string name="abilitar_desabilitar_gps">Enable/Disable Gps</string>	
	<string name="descricao_gps">Go to the mobile definitions to enable your Gps.</string>	
	<string name="gravar_ficheiro_gpx">Save GPX file</string>	
	<string name="criar_ficheiro_gpx">Create a GPX file on directory SafeSport/Logs in your SD card.</string>
	<string name="criar_ficheiro_kml">Create a KML file on directory SafeSport/Logs in your SD card.</string>	
	<string name="gravar_ficheiro_kml">Save KML file</string>
	<string name="distancia_log">Distance before log</string>
	<string name="valor_distancia">Distance before log. Use 0 to maximum frequence.</string>
	<string name="distancia_metros">Distance in meters</string>
	<string name="inserir_distancia">Insert the distance (maximum 9999)</string>
	<string name="tempo_log">Time before log</string>
	<string name="numero_segundos">Number of seconds before log. Use 0 to maximum frequence.</string>
	<string name="tempo_segundos">Time in seconds</string>
	<string name="inserir_segundos">Insert seconds (maximum 9999)</string>
	<string name="criar_ficheiro">Create a new file (GPX,KML)</string>
	<string name="permite_criar">Allows to create a file when application starts or once a day.</string>
	<string name="inicio">at the beginning</string>
	<string name="unidades_distancia">Distance unities (Miles/Kilometers)</string>
	<string name="selecionar">Select Miles or Kilometers</string>
	<string name="sucesso">Message posted to your facebook wall</string>	
	<string name="erro">Failed to post to wall</string>	
	<string name="falha_autenticacao">Authentication with Facebook failed</string>	
	<string name="cancelar_autenticacao">Authentication with Facebook cancelled</string>
	<string name="terminar_corrida">Run Finished</string>	 	
	<string name="terminar_ciclismo">Bike Finished</string>	 	
	<string name="terminar_montanhismo">Mountaineering Finished</string>	 	
	<string name="terminar_snowboard">Snowboard Finished</string>	 	
	<string name="terminar_caminhada">Walk Finished</string>	 	
	<string name="dia">Day</string>	
	<string name="percurso">See the route</string>	
	<string name="distancia_percorrida">Total Distance Traveled</string>	 	
	<string name="tempo_total">Total Time</string>
	<string name="altitude">Covered Altitude</string>
	<string name="iniciar_corrida">Run Started</string>
	<string name="iniciar_ciclismo">Bike Started</string>
	<string name="iniciar_montanhismo">Mountaineering Started</string>
	<string name="iniciar_snowboard">Snowboard Started</string>
	<string name="iniciar_caminhada">Walk Started</string>
	<string name="acompanhe">Follow in real time</string>
	<string name="titulo_gps">GPS Settings</string>
	<string name="mensagem_gps">GPS is not enabled. To Start go to the settings menu and enable it.</string>
	<string name="definicoes_gps">Settings</string>
	<string name="cancelar_gps">Cancel</string>
	<string name="execucao_continua">Safe Sport Tracker still running</string>
	<string name="execucao">Safe Sport Tracker is running</string>	
	<string name="TeamL">DManLancers Team:"\n \n" "  "<i>Firestruck</i>      "                   "<i>EduRocks</i>          "                    " <i>Sycmos</i></string>
</resources>
